реализован функционал wishlist'а
